# polytorus

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTAINERLAB_ANALYSIS.md  Cargo.toml  Dockerfile  Dockerfile.simple  Dockerfile.testnet  IMPLEMENTATION_ISSUES.md  LOCAL_TESTNET_GUIDE.md  Makefile  NETWORK_ERROR_ANALYSIS.md  NETWORK_TEST_COMPLETION_REPORT.md  README.ja.md  README.md  README_TESTNET.md  README_TESTNET_SIMPLE.md  README_TUI.md  README_VIM_TUI.md  REALISTIC_TESTNET_GUIDE.md  TESTNET_DEPLOYMENT.md  advanced_network_test.sh  containerlab-topology-enhanced.yml  containerlab-topology-realistic.yml  containerlab-topology.yml  docker-compose-simple.yml  docker-compose.database-test.yml  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.testnet.yml  final_network_test.sh  kani-config.toml  manual_network_test.sh  p2p_communication_test.sh  quick_network_test.sh  run_containerlab_mining.sh  run_multinode_test.sh  start-local-testnet.sh  test_network.sh  test_network_errors.rs  (+3 more)
.cargo/: audit.toml
.github/ISSUE_TEMPLETE/: bug_report.ja.yml  bug_report.yml  feature_request.ja.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml
benches/: database_storage_bench.rs
config/: database-storage.toml  docker-node.toml  modular.toml  realistic-testnet.toml  testnet.toml
config/frr/: router-ap.conf  router-edge.conf  router-eu.conf  router-na-east.conf
config/frr/router-apac/: frr.conf
config/frr/router-edge/: frr.conf
config/frr/router-eu/: frr.conf
config/frr/router-na/: frr.conf
contracts/: counter.wat  token.wat
crates/consensus/: Cargo.toml
crates/consensus/src/: consensus_engine.rs  lib.rs
crates/data-availability/: Cargo.toml
crates/data-availability/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: execution_engine.rs  lib.rs  script_engine.rs  script_state.rs  utxo.rs
crates/p2p-network/: Cargo.toml
crates/p2p-network/benches/: network_discovery_benchmarks.rs  p2p_benchmarks.rs  scaling_benchmarks.rs  unit_benchmarks.rs
crates/p2p-network/src/: adaptive_network.rs  auto_discovery.rs  discovery.rs  lib.rs  peer.rs  signaling.rs
crates/p2p-network/tests/: integration_test.rs  non_blocking_adaptive_test.rs  non_blocking_integration_test.rs  non_blocking_network_joining_test.rs  non_blocking_peer_test.rs  peer_test.rs  quick_discovery_test.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: lib.rs
crates/traits/: Cargo.toml
crates/traits/src/: lib.rs
crates/wallet/: README.md
crates/wallet/examples_disabled/: address_formats.rs  basic_wallet.rs  multi_signature.rs  wallet_manager.rs
deployment/: ec2-setup.sh
docker/: Dockerfile.distributed  docker-compose.distributed.yml
docs/: API_REFERENCE.md  CI_CD_INTEGRATION.md  DATABASE_STORAGE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_EN.md  MULTI_NODE_SIMULATION.md  MULTI_NODE_SIMULATION.md.backup  MULTI_NODE_SIMULATION_NEW.md  NETWORK_TEST.md  TESTNET_DEPLOYMENT.md  TESTNET_DEPLOYMENT_EN.md  TESTNET_README.md  storage-systems.md  unified-contract-engine.md
ec2-config/: ec2-testnet.toml
examples/: anonymous_eutxo_demo.rs  database_storage_demo.rs  diamond_io_demo.rs  diamond_io_performance_test.rs  erc20_demo.rs  failover_test_app.rs  io_smart_contract_demo.rs  test_database_connection.rs  utxo_demo.rs
examples/smart-contracts/: README.md  compile_examples.sh  test_contracts.rs
examples/smart-contracts/escrow/: simple_escrow.wat
examples/smart-contracts/token/: simple_token.wat
examples/smart-contracts/voting/: simple_voting.wat
kani-verification/: run_verification.sh
kani-verification/src/: verify_crypto.rs  verify_modular.rs
scripts/: analyze_tps.sh  benchmark.sh  benchmark_tps.sh  containerlab_testnet.sh  deploy_testnet.sh  deploy_testnet_en.sh  failover-test.sh  fix_clippy.sh  fix_format_strings.sh  init-postgres.sql  manual-database-test.sh  manual-test.sh  multi_node_simulation.sh  realistic_testnet.sh  realistic_testnet_simulation.sh  run-database-tests.sh  run-e2e-tests.sh  run_kani_verification.sh  simple-testnet.sh  simulate.sh  simulate_propagation.sh  stress-test.sh  testnet-manager.sh  testnet_manager.py
src/: diamond_io_integration_unified.rs  diamond_smart_contracts.rs  lib.rs  main.rs
src/blockchain/: difficulty_tests.rs
src/command/: cli.rs
src/crypto/: anonymous_eutxo.rs  diamond_privacy.rs  enhanced_privacy.rs  real_diamond_io.rs  zk_starks_anonymous_eutxo.rs
src/modular/: consensus.rs  data_availability.rs  diamond_io_layer.rs  storage.rs  transaction_processor.rs
src/network/: mod.rs  p2p_enhanced.rs  p2p_tests.rs  unified_network.rs
src/smart_contract/: advanced_tests.rs  contract_engine_adapter.rs  database_storage.rs  mod.rs  privacy_engine.rs  tests.rs  unified_contract_storage.rs  unified_manager.rs  wasm_engine.rs
src/webserver/: startminer.rs  startnode.rs
tests/: database_integration_tests.rs  erc20_integration_tests.rs  privacy_integration_tests.rs  unified_engine_integration_tests.rs
