[package]
name = "polytorus"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "PolyTorus - 4-Layer Modular Blockchain Platform"
authors = ["quantumshiro"]
license = "MIT"
repository = "https://github.com/quantumshiro/polytorus"
keywords = ["blockchain", "quantum-resistant", "modular", "rollups", "post-quantum"]
categories = ["cryptography", "network-programming", "wasm"]

[workspace]
members = [
    "crates/traits",
    "crates/execution", 
    "crates/settlement",
    "crates/consensus",
    "crates/data-availability", 
    "crates/p2p-network",
]

resolver = "2"

# Workspace package defaults (removed - using main package info instead)

[workspace.dependencies]
# Core shared dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"

# WebRTC P2P networking
webrtc = "0.11"
bytes = "1.5"

# Only essential dependencies for modular layers
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
# Use sled with compression
sled = { version = "0.34.7", features = ["compression"] }
bincode = "1.3"
# Use the latest secure version of wasmtime with necessary features
wasmtime = { version = "34.0.2", default-features = false, features = ["cranelift", "async"] }
wat = "1.0"
clap = "4.0"
rand = "0.8.5"

# Security updates
slab = "0.4.11"  # Fix for RUSTSEC-2025-0047


# Library configuration
[lib]
name = "polytorus"
path = "src/lib.rs"

# Binary configuration
[[bin]]
name = "polytorus"
path = "src/main.rs"

[dependencies]
# Layer crates
traits = { path = "crates/traits" }
execution = { path = "crates/execution" }
settlement = { path = "crates/settlement" }
consensus = { path = "crates/consensus" }
data-availability = { path = "crates/data-availability" }
p2p-network = { path = "crates/p2p-network" }

# External wallet dependency
wallet = { git = "https://github.com/PolyTorus/wallet.git" }

# Core dependencies
anyhow = { workspace = true }

# Force compatible versions for Docker build
base64ct = "=1.6.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

# Persistence
sled = { workspace = true }
bincode = { workspace = true }
