[package]
name = "execution"
version = "0.1.0"
edition = "2021"
description = "Execution Layer - Transaction processing and rollups"
authors = ["quantumshiro"]
license = "MIT"

[features]
default = ["wasm"]
wasm = ["wasmtime", "wat"]

[dependencies]
traits = { path = "../traits" }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

# Cryptography
sha2 = { workspace = true }
hex = { workspace = true }

# WASM execution
wasmtime = { workspace = true, optional = true }
wat = { workspace = true, optional = true }

# Storage
sled = { workspace = true }
bincode = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }