[package]
name = "p2p-network"
version = "0.1.0"
edition = "2021"
authors = ["quantumshiro"]
description = "WebRTC-based P2P networking layer for PolyTorus blockchain"
license = "MIT"
repository = "https://github.com/quantumshiro/polytorus"

[dependencies]
# Core dependencies from workspace
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

# WebRTC dependencies
webrtc = { workspace = true }

# PolyTorus traits
traits = { path = "../traits" }

# Additional P2P networking dependencies
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"
rand = { workspace = true }
serde_bytes = "0.11"

[dev-dependencies]
# Test dependencies
env_logger = { workspace = true }

[features]
default = ["stun-server"]
stun-server = []
test-mode = []