[package]
name = "p2p-network"
version = "0.1.0"
edition = "2021"
authors = ["quantumshiro"]
description = "WebRTC-based P2P networking layer for PolyTorus blockchain"
license = "MIT"
repository = "https://github.com/quantumshiro/polytorus"

[dependencies]
# Core dependencies from workspace
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

# WebRTC dependencies
webrtc = { workspace = true }

# PolyTorus traits
traits = { path = "../traits" }

# Additional P2P networking dependencies
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"
rand = { workspace = true }
serde_bytes = "0.11"
sha1_smol = "1.0"

[dev-dependencies]
# Test dependencies
env_logger = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
futures-util = "0.3"
futures = "0.3"

[features]
default = ["stun-server"]
stun-server = []
test-mode = []

[lints.clippy]
uninlined_format_args = "allow"

[[bench]]
name = "unit_benchmarks"
harness = false

[[bench]]
name = "p2p_benchmarks"
harness = false

[[bench]]
name = "scaling_benchmarks"
harness = false

[[bench]]
name = "network_discovery_benchmarks"
harness = false