[package]
name = "traits"
version = "0.1.0"
edition = "2021"
description = "Shared traits and interfaces for modular blockchain architecture"
authors = ["quantumshiro"]
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# Blockchain primitives
sha2 = { workspace = true }
hex = { workspace = true }